cli/tests/testdata/run/worker_drop_handle_race.js.out
error: Uncaught (in worker "") Error
  throw new Error();
        ^
    at [WILDCARD]/workers/drop_handle_race.js:2:9
    at Object.action (internal:ext/web/02_timers.js:[WILDCARD])
    at handleTimerMacrotask (internal:ext/web/02_timers.js:[WILDCARD])
error: Uncaught (in promise) Error: Unhandled error in child worker.
    at Worker.#pollControl (internal:runtime/js/11_workers.js:[WILDCARD])
